--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -4,17 +4,17 @@
     <div class="row">
       <div class="col col-6 col-t-12 last-item">
         <div class="hero__content">
-          <h1 class="hero__title">{{ site.data.settings.author.say-hello }}</h1>
-          <p class="hero__subtitle">{{ site.data.settings.author.bio }}</p>
+          <h1 class="hero__title">Olá, sou <strong>Mauro Junior</strong></h1>
+          <p class="hero__subtitle">Desenvolvedor, Animador e Motion Designer criando experiências digitais únicas e memoráveis. Especializado em <strong>desenvolvimento web</strong>, <strong>animação</strong> e <strong>motion design</strong>.</p>
           <div class="hero__social">
-            <span class="hero__social-title">Follow Me |</span>
+            <span class="hero__social-title">Conecte-se |</span>
             {% include contact-link.html %}
           </div>
         </div>
       </div>
       <div class="col col-6 col-t-12">
         <div class="hero__image">
-          <img src="{{site.baseurl}}/images/{{ site.data.settings.author.image }}" alt="">
+          <img src="{{site.baseurl}}/images/{{ site.data.settings.author.image }}" alt="Mauro Junior">
         </div>
       </div>
     </div>
