--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -131,3 +131,66 @@ hr {
   border: 0;
   background: $border-color;
 }
+
+/* Portfolio Items */
+.work-box {
+  margin-bottom: 30px;
+}
+
+.portfolio-item {
+  display: block;
+  padding: 35px;
+  margin-bottom: 30px;
+  background-color: var(--light-gray);
+  border-radius: 16px;
+  transition: all .3s ease;
+  
+  &:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    background-color: var(--white);
+  }
+  
+  &__content {
+    text-align: center;
+  }
+  
+  &__title {
+    font-size: 28px;
+    margin-bottom: 15px;
+    color: var(--dark);
+  }
+  
+  &__description {
+    font-size: 16px;
+    color: var(--gray);
+    line-height: 1.5;
+  }
+}
+
+.section-title {
+  margin: 60px 0 40px;
+  font-size: 36px;
+  line-height: 1.4;
+  text-align: center;
+  color: var(--dark);
+}
+
+.achievements-preview {
+  text-align: center;
+  margin-bottom: 60px;
+  
+  .achievements-text {
+    font-size: 18px;
+    color: var(--gray);
+    
+    a {
+      color: var(--dark);
+      text-decoration: underline;
+      
+      &:hover {
+        color: var(--brand-color);
+      }
+    }
+  }
+}
