--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,27 +24,20 @@
             <div class="nav__title">Menu</div>
 
             <ul class="nav__list list-reset">
+              {% for item in site.data.settings.menu %}
               <li class="nav__item">
-                <a href="{{site.baseurl}}/" class="nav__link">Home</a>
+                <a href="{{ item.url | prepend: site.baseurl }}" class="nav__link">{{ item.name }}</a>
               </li>
-              {% for page in site.pages %}
-                {% unless page.name == 'tags.html' or page.name == '404.html' %}
-              {% if page.title %}
-              <li class="nav__item">
-                <a href="{{ page.url | prepend: site.baseurl }}" class="nav__link">{{ page.title }}</a>
-              </li>
-              {% endif %}
-                {% endunless %}
               {% endfor %}
             </ul>
 
           </div>
         </nav>
 
-        <div class="nav-buttons">
+        <!-- <div class="nav-buttons">
           <i class="nav__icon nav__icon-menu ion ion-md-menu" aria-label="Menu Icon"></i>
           <i class="nav__icon nav__icon-search ion ion-md-search" aria-label="Search Icon"></i>
-        </div>
+        </div> -->
 
         <div class="header__overlay"></div>
       </header>
